--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -832,12 +832,10 @@
     <input type="text" id="other-company-search" name="other_company_search" class="form-input" placeholder="กรอกชื่อบริษัท" style="width:100%;">
   </div>
 <div style="flex:0 0 90px; max-width:90px;">
-  <button type="submit" class="btn btn-primary search-btn" style="height:32px; min-width:70px; font-size:0.95em; padding: 4px 10px; margin-top:0; width:100%;">ค้นหา</button>
+  <button type="submit" class="btn btn-primary search-btn">ค้นหา</button>
 </div>
 <div style="flex:0 0 90px; max-width:90px;">
-  <button type="button" class="btn btn-primary search-btn" 
-          style="height:45px; min-width:70px; font-size:0.95em; padding:4px 10px; margin-top:0; width:100%;" 
-          onclick="window.print()">
+  <button type="button" id="view-report-btn" class="btn btn-primary search-btn" disabled>
     ดูรายงาน
   </button>
 </div>
